# glove-and-phasespace-acquisition

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: objects_list.yaml  objects_list.yaml~  rosconsole_debug_enabled.conf
include/glove_and_phasespace_acquisition/: item.h  subject.h
launch/: experiment.launch
src/: item.cpp  major_listener.cpp  random_objects_listener.cpp  subject.cpp
