<package format="2">
  <name>glove_and_phasespace_acquisition</name>
  <version>0.5.2</version>
  <description>
    ROS nodes to retrieve (and store in log files) data from both PhaseSpace Motion Capture system (markers position)
    and sensorized Glove (IMUs acceleration). Check the readme for details.
  </description>
  <author>Alessandro Tondo</author>
  <maintainer email="tondo.codes+ros@gmail.com">Alessandro Tondo</maintainer>
  <license>GNU GPL v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>glove_acquisition</depend>
  <depend>phasespace_acquisition</depend>
</package>
